Add user action for the instance_has_master indicator